Fix metadata fetch using oEmbed and flatten project structure for better Vercel asset loading

--- a/vercel.json
+++ b/vercel.json
@@ -11,8 +11,12 @@
             "handle": "filesystem"
         },
         {
-            "src": "/(.*)",
+            "src": "/api/(.*)",
             "dest": "/server.js"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/index.html"
         }
     ]
 }
