Fix Vercel entrypoint error: Synchronized package.json and vercel.json with api/index.js structure

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "easy-downloader",
   "version": "1.0.0",
   "description": "Modern YouTube Video Downloader with Node.js Backend",
-  "main": "server.js",
+  "main": "api/index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node api/index.js",
     "dev": "node --watch server.js"
   },
   "dependencies": {
