Fix root routing: Explicitly map / to public/index.html to resolve Cannot GET /

--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
             "destination": "/api/index.js"
         },
         {
+            "source": "/",
+            "destination": "/public/index.html"
+        },
+        {
             "source": "/(.*)",
             "destination": "/public/$1"
         }
