--- a/vercel.json
+++ b/vercel.json
@@ -6,8 +6,8 @@
             "destination": "/api/index.js"
         },
         {
-            "source": "/",
-            "destination": "/index.html"
+            "source": "/((?!api/).*)",
+            "destination": "/api/index.js"
         }
     ]
 }
