--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "easy-downloader",
   "version": "1.0.0",
   "description": "Modern YouTube Video Downloader with Node.js Backend",
+  "scripts": {
+    "start": "node api/index.js",
+    "dev": "node api/index.js"
+  },
   "dependencies": {
     "@distube/ytdl-core": "^4.16.12",
     "@mrnima/facebook-downloader": "^1.0.0",
