Final Priority-Based Routing Fix: Cleaned API and added filesystem handler to resolve 'Cannot GET /' permanently

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,13 @@
         {
             "source": "/api/(.*)",
             "destination": "/api/index.js"
+        },
+        {
+            "handle": "filesystem"
+        },
+        {
+            "source": "/(.*)",
+            "destination": "/index.html"
         }
     ]
 }
