--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,7 @@
     "rewrites": [
         {
             "source": "/api/(.*)",
-            "destination": "/api/index.js"
-        },
-        {
-            "handle": "filesystem"
-        },
-        {
-            "source": "/(.*)",
-            "destination": "/index.html"
+            "destination": "/api/server.js"
         }
     ]
 }
