--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@tobyg74/tiktok-api-dl": "^1.3.7",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "youtube-dl-exec": "^3.0.30"
   }
