--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,8 @@
 {
-    "version": 2,
-    "builds": [
+    "rewrites": [
         {
-            "src": "api/server.js",
-            "use": "@vercel/node"
-        },
-        {
-            "src": "public/**",
-            "use": "@vercel/static"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/api/(.*)",
-            "dest": "api/server.js"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "public/$1"
+            "source": "/api/:path*",
+            "destination": "/api/server.js"
         }
     ]
 }
