--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,13 @@
 {
     "version": 2,
-    "builds": [
+    "rewrites": [
         {
-            "src": "api/server.js",
-            "use": "@vercel/node"
+            "source": "/api/(.*)",
+            "destination": "/api/server.js"
         },
         {
-            "src": "public/**",
-            "use": "@vercel/static"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/api/(.*)",
-            "dest": "api/server.js"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "public/$1"
+            "source": "/(.*)",
+            "destination": "/public/$1"
         }
     ]
 }
