--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "easy-downloader",
-  "version": "1.0.0",
-  "description": "Modern YouTube Video Downloader with Node.js Backend",
+  "version": "2.1.0",
+  "description": "Hyper-Resilient Video Downloader",
+  "main": "api/server.js",
   "dependencies": {
-    "@distube/ytdl-core": "^4.16.12",
-    "@mrnima/facebook-downloader": "^1.0.0",
-    "@tobyg74/tiktok-api-dl": "^1.3.7",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^4.18.2",
-    "youtube-dl-exec": "^3.0.30"
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
