--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "easy-downloader",
   "version": "2.1.0",
   "description": "Hyper-Resilient Video Downloader",
-  "main": "api/server.js",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "node index.js"
+  },
   "dependencies": {
     "axios": "^1.6.7",
     "cors": "^2.8.5",
