--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,9 @@
 {
     "version": 2,
-    "builds": [
-        {
-            "src": "api/server.js",
-            "use": "@vercel/node"
-        },
-        {
-            "src": "public/**",
-            "use": "@vercel/static"
-        }
-    ],
     "rewrites": [
         {
             "source": "/api/(.*)",
-            "destination": "/api/server.js"
+            "destination": "/index.js"
         },
         {
             "source": "/(.*)",
